k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: sample
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: sample-api:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080

        volumeMounts:
          - name: storage
            mountPath: /app/storage

        startupProbe:
          httpGet:
            path: /health/live
            port: 8080
          failureThreshold: 30
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080

      volumes:
      - name: storage
        hostPath:
          path: "/run/desktop/mnt/host/d/AppStorage"
          type: DirectoryOrCreate
