k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: sample
spec:
  type: ClusterIP 
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
