k8s/sql.yml
apiVersion: v1
kind: Service
metadata:
  name: sql
  namespace: sample
spec:
  selector:
    app: sql
  ports:
    - port: 1433
      targetPort: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql
  namespace: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql
  template:
    metadata:
      labels:
        app: sql
    spec:
      containers:
      - name: sql
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
